[tool.poetry]
name = "cesar"
version = "0.1.0"
description = "Implementação da cifra de cesar em python"
authors = ["Victor Domingues <victordominguesince01@gmail.com>"]
readme = "README.md"
packages = [
    { include = "applicationCesar", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
isort = "^6.0.1"
mkdocs = "^1.6.1"
prospector = "^1.15.2"
pip-audit = "^2.8.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"